--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravelcollective/html": "^6.4",
         "yajra/laravel-datatables-oracle": "^10.8"
     },
     "require-dev": {
