--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
+#DB_HOST=104.237.159.237
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=crawldomain
+#DB_USERNAME=tuantt
 DB_USERNAME=root
+#DB_PASSWORD=Maiyeu@123
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
